--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,5 @@ multi_line_output=3
 
 [flake8]
 max-line-length=120
+ignore=E231
 exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build,dist,*.egg-info
