--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,20 @@
 #
 #    pip-compile
 #
-appdirs==1.4.3            # via black
 asgiref==3.2.3            # via django
-attrs==19.3.0             # via black
-black==19.10b0
-click==7.0                # via black
+certifi==2019.11.28       # via requests
+chardet==3.0.4            # via requests
+defusedxml==0.6.0         # via python3-openid
+django-allauth==0.41.0
 django-environ==0.4.5
+django-extensions==2.2.6
 django==3.0.2
-entrypoints==0.3          # via flake8
-flake8==3.7.9
-isort==4.3.21
-mccabe==0.6.1             # via flake8
-pathspec==0.7.0           # via black
-pycodestyle==2.5.0        # via flake8
-pyflakes==2.1.1           # via flake8
+idna==2.8                 # via requests
+oauthlib==3.1.0           # via requests-oauthlib
+python3-openid==3.1.0     # via django-allauth
 pytz==2019.3              # via django
-regex==2020.1.8           # via black
+requests-oauthlib==1.3.0  # via django-allauth
+requests==2.22.0          # via django-allauth, requests-oauthlib
+six==1.14.0               # via django-extensions
 sqlparse==0.3.0           # via django
-toml==0.10.0              # via black
-typed-ast==1.4.1          # via black
+urllib3==1.25.8           # via requests
