--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ django-environ==0.4.5
 django-extensions==2.2.6
 django==3.0.2
 idna==2.8                 # via requests
+mysqlclient==1.4.6
 oauthlib==3.1.0           # via requests-oauthlib
+pillow==7.0.0
 python3-openid==3.1.0     # via django-allauth
 pytz==2019.3              # via django
 requests-oauthlib==1.3.0  # via django-allauth
