--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,7 @@ multi_line_output=3
 max-line-length=120
 ignore=E231
 exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build,dist,*.egg-info
+
+[mypy]
+files=src
+ignore_missing_imports=True
